2008-04-14  Gabor Loki  <loki@inf.u-szeged.hu>

        Reviewed by Geoffrey Garen.

        Bug 18489: Squirrelfish doesn't build on linux
        <https://bugs.webkit.org/show_bug.cgi?id=18489>

        * WebCore.pro: Add JavaScriptCore/VM into include path

2008-04-10  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoffrey Garen.

        Adjusted WebCore JS functions to the new "getConstructData" calling convention.

2008-03-30  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Adjusted WebCore JS functions to the new "getCallData" calling convention.

2008-05-12  David Kilzer  <ddkilzer@apple.com>

        Fix logic error in DocLoader::clearPreloads()

        Reviewed by Antti.

        * loader/DocLoader.cpp:
        (WebCore::DocLoader::clearPreloads): Be sure to decrease the preload count for
        the cached resource before trying to remove it from the cache.  A non-zero
        preload count can prevent the resource from being removed from the cache.

2008-05-12  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam.

        Handle empty manifest files without crashing.
        
        * loader/appcache/ApplicationCacheGroup.cpp:
        (WebCore::ApplicationCacheGroup::startLoadingEntry):

2008-05-12  Alp Toker  <alp@nuanti.com>

        GTK+ build fix for breakage in r33056. Include limits.h for INT_MAX.

        * platform/graphics/FontCache.h:

2008-05-12  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam.

        Add user agent to requests when loading/updating the cache.
    
        * loader/FrameLoader.h:
        * loader/appcache/ApplicationCacheGroup.cpp:
        (WebCore::ApplicationCacheGroup::update):
        (WebCore::ApplicationCacheGroup::startLoadingEntry):

2008-05-12  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam.

        Make it possible to perform synchronous loads from the application cache.
        
        * loader/DocumentLoader.cpp: